<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            android:id="@+id/poster_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:elevation="@dimen/cardview_elevation"
            android:minHeight="@dimen/detail_card_min_height"
            android:minWidth="@dimen/detail_card_min_width"
            app:cardCornerRadius="@dimen/cardview_corner_radius"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="@string/poster_transition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/rate_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:elevation="@dimen/cardview_elevation"
            app:cardCornerRadius="@dimen/cardview_corner_radius"
            app:layout_constraintBottom_toTopOf="@+id/vote_count_card"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/poster_card"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:minHeight="@dimen/detail_card_min_height"
                android:minWidth="@dimen/detail_card_min_width"
                android:padding="@dimen/detail_cardview_padding">

                <TextView
                    android:id="@+id/tv_rate"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/rate_bar"
                    app:layout_constraintEnd_toEndOf="@+id/rate_bar"
                    app:layout_constraintStart_toStartOf="@+id/rate_bar"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/rate_bar"
                    style="@style/Base.Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/vote_count_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/cardview_elevation"
            app:cardCornerRadius="@dimen/cardview_corner_radius"
            app:layout_constraintBottom_toTopOf="@+id/shine_heart"
            app:layout_constraintEnd_toEndOf="@+id/rate_card"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/rate_card"
            app:layout_constraintTop_toBottomOf="@+id/rate_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/detail_card_min_height"
                android:minWidth="@dimen/detail_card_min_width"
                android:padding="@dimen/detail_cardview_padding">

                <TextView
                    android:id="@+id/vote_count_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/vote_count_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/vote_count"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="@+id/vote_count_label"
                    app:layout_constraintStart_toStartOf="@+id/vote_count_label"
                    app:layout_constraintTop_toBottomOf="@+id/vote_count_label" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>


        <com.sackcentury.shinebuttonlib.ShineButton
            android:id="@+id/shine_heart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            app:btn_color="@android:color/darker_gray"
            app:btn_fill_color="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="@+id/poster_card"
            app:layout_constraintEnd_toEndOf="@+id/vote_count_card"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/vote_count_card"
            app:layout_constraintTop_toBottomOf="@+id/vote_count_card"
            app:siShape="@raw/heart" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.60" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/poster_card"
            tools:text="Avengers: Infinity War" />


        <TextView
            android:id="@+id/tv_duration"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_time_black_24dp"
            android:drawableStart="@drawable/ic_time_black_24dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text=" 2h 40m" />

        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="56dp"
            android:drawableLeft="@drawable/ic_genres"
            android:drawableStart="@drawable/ic_genres"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/tv_duration"
            app:layout_constraintTop_toTopOf="@+id/tv_duration" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres" />

        <TextView
            android:id="@+id/tv_quote"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="''' An entire universe. Once and for all. '''" />


        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_quote" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <TextView
            android:id="@+id/tv_budget_label"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_tv_budget_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

        <TextView
            android:id="@+id/tv_budget"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_budget_label"
            app:layout_constraintTop_toTopOf="@+id/tv_budget_label"
            tools:text="300000000" />

        <TextView
            android:id="@+id/tv_revenue_label"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_tv_revenue_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/tv_budget_label" />

        <TextView
            android:id="@+id/tv_revenue"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_revenue_label"
            app:layout_constraintTop_toTopOf="@+id/tv_revenue_label"
            tools:text="300000000" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="16dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/trailers_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="@dimen/cardview_elevation"
            app:cardCornerRadius="@dimen/cardview_corner_radius"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_revenue_label">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_cardview_padding">

                <TextView
                    android:id="@+id/trailers_label"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_trailers_label" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trailers_label">

                </android.support.v7.widget.RecyclerView>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/reviews_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:elevation="@dimen/cardview_elevation"
            app:cardCornerRadius="@dimen/cardview_corner_radius"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/trailers_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_cardview_padding">

                <TextView
                    android:id="@+id/reviews_label"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_reviews_label" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/reviews_label">


                </android.support.v7.widget.RecyclerView>


            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</ScrollView>